@@ -593,6 +593,103 @@ DeviceCallContext::$supportedActions['Template-clone '] = array(
     ),
 );
 
+DeviceCallContext::$supportedActions['VirtualSystem-delete'] = array(
+    'name' => 'virtualsystem-delete',
+    'MainFunction' => function (DeviceCallContext $context) {
+
+        $object = $context->object;
+        $name = $object->name();
+
+        $pan = $context->subSystem;
+        if( !$pan->isFirewall() )
+            derr( "only supported on Firewall config" );
+
+        if( get_class($object) == "VirtualSystem" )
+        {
+            $string ="     * delete VirtualSystem: " . $name;
+            PH::ACTIONlog( $context, $string );
+
+            if( $context->isAPI )
+            {
+                $con = findConnectorOrDie($object);
+                $xpath = DH::elementToPanXPath($object->xmlroot);
+
+                $con->sendDeleteRequest($xpath);
+            }
+
+            $pan->removeVirtualSystem($object);
+        }
+    }
+);
+
+DeviceCallContext::$supportedActions['SharedGateway-delete'] = array(
+    'name' => 'sharedgateway-delete',
+    'MainFunction' => function (DeviceCallContext $context) {
+
+        $object = $context->object;
+        $name = $object->name();
+
+        $pan = $context->subSystem;
+        if( !$pan->isFirewall() )
+            derr( "only supported on Firewall config" );
+
+        if( get_class($object) == "VirtualSystem" )
+        {
+            $string ="     * delete SharedGateway: " . $name;
+            PH::ACTIONlog( $context, $string );
+
+            if( $context->isAPI )
+            {
+                $con = findConnectorOrDie($object);
+                $xpath = DH::elementToPanXPath($object->xmlroot);
+
+                $con->sendDeleteRequest($xpath);
+            }
+
+            $pan->removeSharedGateway($object);
+        }
+    }
+);
+
+DeviceCallContext::$supportedActions['SharedGateway-migrate-to-vsys'] = array(
+    'name' => 'sharedgateway-migrate-to-vsys',
+    'MainFunction' => function (DeviceCallContext $context) {
+
+        $object = $context->object;
+        $name = $object->name();
+
+        $pan = $context->subSystem;
+        if( !$pan->isFirewall() )
+            derr( "only supported on Firewall config", null, false );
+        if( get_class($object->owner) !== "SharedGatewayStore" )
+            derr( "this is not a SharedGateway", null, false );
+
+        if( get_class($object) == "VirtualSystem" )
+        {
+            $newVSYSname = $context->arguments['name'];
+            $vsys_number = str_replace( "vsys", "", $newVSYSname);
+
+            $string ="     * migrate SharedGateway: " . $name." to vsys: ".$newVSYSname;
+            PH::ACTIONlog( $context, $string );
+
+            $vsys = $pan->createVirtualSystem($vsys_number);
+
+            $clone = $object->xmlroot->cloneNode(true);
+
+            $clone->setAttribute("name", "vsys".$vsys_number);
+
+            $vsys->xmlroot->parentNode->appendChild($clone);
+            $vsys->xmlroot->parentNode->removeChild($vsys->xmlroot);
+
+            $object->owner->xmlroot->removeChild($object->xmlroot);
+        }
+    },
+    'args' => array(
+        'name' => array('type' => 'string', 'default' => 'false'),
+    ),
+);
+
+
 DeviceCallContext::$supportedActions['ManagedDevice-create'] = array(
     'name' => 'manageddevice-create',
     'MainFunction' => function (DeviceCallContext $context) {
