@@ -5,6 +5,7 @@ UTIL:
 * different classes | improve usage of flag 'XML_PARSE_BIG_LINES' in method loadXML
 * class PANConf / Panoramaconfg | implement method ChildDeviceGroups() for 'location=shared:excludemaindg'
 * type=gcp | introduce argument 'namespace=XYZ' to specify and better filter for get pods
+* type=device | introduce actions=virtualSystem-delete/sharedgateway-delete/sharedgateway-migrate-to-vsys
 
 BUGFIX:
 * class PANConf|VirtualSystem | bugfix to support SharedGateway also for Tag objects correctly
